# pyo3-tracing-opentelemetry

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  Taskfile.yml
.github/workflows/: ci.yml  release.yml
crates/example/: Cargo.toml  pyproject.toml
crates/example/src/: lib.rs
crates/example/tests/: test_tracing.py
example/: Cargo.toml  Taskfile.yml  example_module.pyi  pyproject.toml
example/src/: lib.rs
example/tests/: conftest.py  test_tracing.py
example/tests/__snapshots__/: test_tracing.ambr
pyo3-tracing-opentelemetry/: Cargo.toml
pyo3-tracing-opentelemetry/src/: context.rs  export.rs  init.rs  lib.rs
src/: lib.rs
