[workspace]
resolver = "2"
members = [
    "pyo3-tracing-opentelemetry",
    "example",
]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jij-Inc/pyo3-tracing-opentelemetry"

[workspace.dependencies]
anyhow = "1.0"
futures-util = "0.3"
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
pyo3 = { version = "0.27", features = ["anyhow"] }
pyo3-stub-gen = "0.19"
tracing = "0.1"
tracing-opentelemetry = "0.29"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pyo3-tracing-opentelemetry = { path = "pyo3-tracing-opentelemetry" }
