[package]
name = "pyo3-tracing-opentelemetry-example"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "example_module"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
pyo3-tracing-opentelemetry.workspace = true
tracing.workspace = true
